--- a/TESS_UCD.bib
+++ b/TESS_UCD.bib
@@ -1,5 +1,30 @@
 %% Additional references
 
+@ARTICLE{loyd2018,
+       author = {{Loyd}, R.~O. Parke and {France}, Kevin and {Youngblood}, Allison and
+         {Schneider}, Christian and {Brown}, Alexander and {Hu}, Renyu and
+         {Segura}, Ant{\'\i}gona and {Linsky}, Jeffrey and {Redfield}, Seth and
+         {Tian}, Feng and {Rugheimer}, Sarah and {Miguel}, Yamila and
+         {Froning}, Cynthia S.},
+        title = "{The MUSCLES Treasury Survey. V. FUV Flares on Active and Inactive M Dwarfs}",
+      journal = {\apj},
+     keywords = {planets and satellites: atmospheres, stars: activity, stars: low-mass, ultraviolet: stars, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2018,
+        month = nov,
+       volume = {867},
+       number = {1},
+          eid = {71},
+        pages = {71},
+          doi = {10.3847/1538-4357/aae2bd},
+archivePrefix = {arXiv},
+       eprint = {1809.07322},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2018ApJ...867...71L},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
 @MISC{lightkurve2019,
    author = {{Lightkurve Collaboration} and {Cardoso}, J.~V.~d.~M. and
              {Hedges}, C. and {Gully-Santiago}, M. and {Saunders}, N. and
