Explain FFD corrections.

--- a/TESSUCD1.tex
+++ b/TESSUCD1.tex
@@ -136,6 +136,7 @@ where $y_i$ is the $i$th flux value of the flare in the de-trended light curve, 
 
 The  uncertainty on the duration of the flares is dominated by the decay tail of the flare hiding in the noise and shortening the duration accordingly. On the other hand, the shortest flares cannot lift the minimum required three subsequent data points above the 3$\sigma$ threshold. Theoretically, extremely long, and low-amplitude flares, that barely exceed the noise limits may be levelled out by the de-trending procedure. But such flares have not been observed yet, not least because above a duration of a few hours low amplitude variability could also be spots or are longer-lived phenomena on the stellar surface. The uncertainty on amplitude consists of both the photometric uncertainty, and a bias towards lower uncertainties that stems from the integration over the 2 min time bin which flattens the sharp peak of the flare. Because both uncertainties are dominated by systematic effects, we quantify these properties by injecting and recovering flares with known properties, and calculating the variance in these properties for those flares that are recovered with the measured amplitude and duration.
 \subsubsection{Injection-recovery}
+\label{subsec:injrec}
 We injected a large number of synthetic flares in each light curve, and ran the de-trending and flare finding procedure detailed above on each of them. The statistical comparison between injected and recovered properties allows us to quantify the properties of the observed flare candidates. First, we measured the ratio of the injected $ED$ to the recovered $ED$ as a function of recovered amplitude $a_r$ and duration $d_r$. Second, we determined the injected $(a_i,d_i)$ bin that corresponds to a given recovered, that is observed, $(a_r,d_r)$ bin. The injected bin contains a sample of synthetic flares. At a fixed number of flares per bin, and if the bin is large, the sample's variance depends on the size of the bin. But if the bin is small enough the variance arises from the light curve properties that affect the recovery of a flare: photometric noise, variability, and time sampling. Ultimately, we can not only better characterize the flares' properties but also calculate the probability of any given flare to be recovered by comparing the number of flares in the recovered $(a_r,d_r)$ bin to the number of flares in the corresponding injected $(a_i,d_i)$ bin. So for each flare candidate we can find a corrected $a$, $d$, $ED$, and a recovery probability. The latter two are used to statistically correct for systematic effects in the light curves, and obtain more accurate flare frequency distributions (section \ref{subsec:FFD}).
 
 %-------------------------------------------------------------------------
@@ -172,7 +173,8 @@ In the log-log representation the above relation reads
 \end{equation}
 In the cumulative distribution the power law exponent becomes $-\hat{\alpha} = -\alpha +1$. 
 We used a stabilized Maximum Likelihood Estimator~\citep{maschberger2009} to find $\alpha$. A non-linear least squares fit yielded the intercept $\beta$. We applied two powerful statistical tests to the results~\citep{maschberger2009}. The first is the stabilized Kolmogorov-Smirnov statistic which indicates if the distribution is consistent with a power law with the exponent we determined. We chose a significance level of 5\%, in agreement with previous work~\citep{loyd2018}. The second is the exceedance statistic, which is a test for truncation at the high energy limit of the FFD. To determine $p$-values we drew samples from untruncated power laws with the same minimum energy and number of events as in the observed FFDs. The distribution of the obtained maximum $ED$ values was used for a left-sided hypothesis test at $p=2.5\%$. 
- 
+\\
+The fits and tests will have biased results unless the flares in the FFDs stem from a single light curve with a 100\% recovery probability and ideal energy recovery above a clear cut energy threshold. This is not the case for any of our FFDs. However, we can mitigate these effects using the injection-recovery procedure in Section \ref{subsec:injrec}. Fig. \ref{fig:ffd_all_ed} illustrates the steps we took to do so. First, we adjusted the events' energies using the $ED$ ratio. We placed every flare in the sample onto the heatmap in Fig. \ref{fig:injrec_edrec} according to their recovered amplitude and duration $(a_r,d_r)$. In general, flare energies were underestimated. Then we mapped $(a_r,d_r)$ to $(a_i,FWHM)$ and determined the recovery probability. Dividing by the probability increased the frequency of any event in the distribution. Finally, we used a first order approximation to the detection thresholds of the individual stars. In portions of the FFD where only a fraction of all contributing stars had detected flares we increased the frequencies of flares assuming that the only differences between the light curves are their detection thresholds, and that all flares in the sample follow  the same power law. The other underlying assumption here is that all light curves in fact have a detection threshold in $ED$ that coincides with the lowest detected energy, while in fact the detection threshold is a function of $(a_i,FWHM)$~(Fig. \ref{fig:injrec_recprob}).
 %The flare frequency distribution, binned by spectral type, is shown in Figure~\ref{fig:ffd}. Overall, the M6 and M7 dwarfs flare more than those in previous work. 
 %
 %
